added item pages

--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -479,14 +479,14 @@
   }
 
   /* Gallery Item Pages */
-
+/* 
   .item-pages {
     margin: 25px auto;
   }
 
   .item-image {
     margin-right: 20px;
-  }
+  } */
 
   /* Politics Gallery */
 
