--- a/public/css/tablet.css
+++ b/public/css/tablet.css
@@ -496,13 +496,13 @@
 
   /* Memorabilia Item Pages */
 
-  .item-pages {
+  /* .item-pages {
     margin: 25px auto;
   }
 
   .item-image {
     margin-right: 20px;
-  }
+  } */
 
   /*Newsgathering Tools*/
 
@@ -1023,14 +1023,14 @@
   }
 
   /* Gallery Item Pages */
-
+/* 
   .item-pages {
     margin: 25px auto;
   }
 
   .item-image {
     margin-right: 20px;
-  }
+  } */
 
   /* Footer */
 
