--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -340,35 +340,6 @@ h3 a {
   right: 5px;
 }
 
-/* .review {
-  background-image: url("../images/Graphics/Vintage-Notebook.jpeg");
-  background-size: cover;
-  color: #000000;
-  height: 550px;
-} */
-/* 
-.food-review {
-  float: left;
-} */
-
-/* .food-photo {
-  float: left;
-} */
-
-/* .food-photo img {
-  border: solid 1px #000000
-} */
-
-/* h6 {
-  font-weight: 800;
-  text-align: center;
-} */
-
-/* .address {
-  font-weight: 800;
-  text-align: center;
-} */
-
 #mid-atlantic {
   display: inline-block;
   background-image: url("../images/CoverPhotos/Seafood.jpeg");
@@ -462,24 +433,8 @@ h5 a {
   float: left;
 }
 
+
 /* Conflict Gallery */
-
-.navigation-bar {
-  border-top: solid 1px #808080;
-  border-bottom: solid 1px #808080;
-}
-
-.red {
-  color: #ff0000;
-}
-
-.navigation-bar a {
-  color: #ffffff;
-}
-
-.next-item a {
-  color: #ffffff;
-}
 
 #gulf-wars {
   display: inline-block;
@@ -528,14 +483,13 @@ h5 a {
 .conflict-category {
   background-color: rgba(255, 255, 255, 0.8);
   color: #000000;
-  /* width: 30%;
-  height: auto; */
 }
 
 .conflict-category h5 {
   text-align: center;
   font-weight: 600;
 }
+
 
 /* Gallery Category Pages */
 
@@ -567,40 +521,58 @@ h5 a {
 
 /* Gallery Item Pages */
 
+.navigation-bar {
+  border-top: solid 1px #808080;
+  border-bottom: solid 1px #808080;
+}
+
+.red {
+  color: #ff0000;
+}
+
+.navigation-bar a {
+  color: #ffffff;
+}
+
+.next-item a {
+  color: #ffffff;
+}
+
+
 /* Style the Image Used to Trigger the Modal */
-#shatteredGlass {
+/* #shatteredGlass {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
 }
 
-#shatteredGlass:hover {opacity: 0.7;}
+#shatteredGlass:hover {opacity: 0.7;} */
 
 /* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+/* .modal {
+    display: none; 
+    position: fixed;  
+    z-index: 1; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.9);  */
+/* }
 
 /* Modal Content (Image) */
-.modal-content {
+/* .modal-content {
     margin: auto;
     display: block;
     width: 80%;
     max-width: 700px;
-}
+} */
 
 /* Caption of Modal Image (Image Text) - Same Width as the Image */
-#shatteredGlassCaption {
+/* #shatteredGlassCaption {
     margin: auto;
     display: block;
     width: 80%;
@@ -609,10 +581,10 @@ h5 a {
     color: #ccc;
     padding: 10px 0;
     height: 150px;
-}
+} */
 
 /* Add Animation - Zoom in the Modal */
-.modal-content, #shatteredGlassCaption { 
+/* .modal-content, #shatteredGlassCaption { 
     -webkit-animation-name: zoom;
     -webkit-animation-duration: 0.6s;
     animation-name: zoom;
@@ -627,10 +599,10 @@ h5 a {
 @keyframes zoom {
     from {transform:scale(0)} 
     to {transform:scale(1)}
-}
+} */
 
 /* The Close Button */
-.close {
+/* .close {
     position: absolute;
     top: 15px;
     right: 35px;
@@ -638,36 +610,42 @@ h5 a {
     font-size: 40px;
     font-weight: bold;
     transition: 0.3s;
-}
+} */
 
-.close:hover,
+/* .close:hover,
 .close:focus {
     color: #bbb;
     text-decoration: none;
     cursor: pointer;
-}
+} */
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
+/* @media only screen and (max-width: 700px){
     .modal-content {
         width: 100%;
     }
-}
+} */
 
-.item-block {
+/* .item-block {
   border-top: 5px ridge blue;
   border-bottom: 5px ridge blue;
   padding: 15px;
+} */
+
+.item-pages {
+  margin-bottom: 15px;
 }
 
 .item-image {
   display: inline-block;
   float: left;
-  margin-bottom: 15px;
+  margin-right: 25px;
+  width: 45%;
 }
 
 .item-text {
   line-height: 30px;
+  vertical-align: center;
 }
 
 .passage {
@@ -1275,13 +1253,13 @@ footer p {
 
   /* Gallery Item Pages */
 
-  .item-pages {
+  /* .item-pages {
     margin: 25px auto;
   }
 
   .item-image {
     margin-right: 20px;
-  }
+  } */
 
   /* Politics Gallery */
 
@@ -1847,13 +1825,13 @@ footer p {
 
   /* Gallery Item Pages */
 
-  .item-pages {
+  /* .item-pages {
     margin: 25px auto;
   }
 
   .item-image {
     margin-right: 20px;
-  }
+  } */
 
   /* Footer */
 
@@ -2351,14 +2329,14 @@ footer p {
   }
 
   /* Gallery Item Pages */
-
+/* 
   .item-pages {
     margin: 25px auto;
   }
 
   .item-image {
     margin-right: 20px;
-  }
+  } */
 
   /* Footer */
 
