added item pages

--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -479,13 +479,19 @@
   }
 
   /* Gallery Item Pages */
-/* 
-  .item-pages {
-    margin: 25px auto;
-  }
 
-  .item-image {
-    margin-right: 20px;
+  /* .item-text-block {
+    padding: 30px; */
+    /* float: right; */
+    /* display: inline-block;
+    width: 55%;
+    height: 558px;
+  } */
+  
+  /* .item-text {
+    line-height: 30px; */
+    /* margin-top: 25px; */
+    /* position: relative;
   } */
 
   /* Politics Gallery */
