--- a/public/css/tablet.css
+++ b/public/css/tablet.css
@@ -1023,14 +1023,20 @@
   }
 
   /* Gallery Item Pages */
-/* 
-  .item-pages {
-    margin: 25px auto;
-  }
 
-  .item-image {
-    margin-right: 20px;
-  } */
+  .item-text-block {
+    padding: 30px;
+    /* float: right; */
+    display: inline-block;
+    width: 55%;
+    height: 558px;
+  }
+  
+  .item-text {
+    line-height: 30px;
+    /* margin-top: 25px; */
+    position: relative;
+  }
 
   /* Footer */
 
