--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -658,6 +658,18 @@ h5 a {
   margin-left: 25%;
 }
 
+#presidential-seal {
+  margin-left: 14%;
+  margin-top: 25px;
+  display: inline-block;
+}
+
+#seal-caption {
+  margin-bottom: 25px;
+  font-style: italic; 
+  display: inline-block;
+  margin-left: 14%;
+}
 
 /* Politics Gallery */
 
